--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coderunner",
-  "displayName": "Concurrent CodeRunner",
+  "displayName": "CodeRunner",
   "description": "",
   "version": "0.0.1",
   "engines": {
@@ -33,8 +33,8 @@
     },
     "commands": [
       {
-        "command": "helloWorld",
-        "title": "Hello World"
+        "command": "RunCode",
+        "title": "RunCode"
       }
     ]
   },
